form pad-bot fixed and linkedin title on mobile removed hero height on mobile fixed

--- a/src/Styles/Modules/Hero.sass
+++ b/src/Styles/Modules/Hero.sass
@@ -23,7 +23,7 @@
     @include section-layout
     position: relative
     @media(max-width: $mobile-width)
-      height: 90vh
+      min-height: 90vh
 
   &_image-wrapper
     width: 320px
@@ -31,7 +31,6 @@
     border-radius: clamp(16px, 5vw, 999px)
     overflow: hidden
     transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1)
-    @media(max-width: $mobile-width)
 
   &_parallax
     z-index: 0
@@ -127,6 +126,7 @@
 
   .hero_name-track
     display: flex
+    gap: 0px
     width: max-content
     animation: hero-marquee 8s linear infinite
     will-change: transform
