--- a/src/Styles/Modules/ProjectCard.sass
+++ b/src/Styles/Modules/ProjectCard.sass
@@ -72,6 +72,9 @@
     padding: clamp(6px, 2vw, 8px)
     gap: clamp(6px, 3vw, 12px)
 
+    & .project-card_children
+      transform: scale(1)
+
   /* 🔑 hover = keyboard focus */
   &:hover,
   &:focus-within
@@ -136,10 +139,6 @@
   transform: scale(0.65)
   &:hover
     transform: translateY(-60%) scale(0.65)
-  @media (max-width: $mobile-width)
-    transform: scale(1)
-    &:hover
-      transform: translateY(-30%) scale(1)
 
 
 .portfolio_link
